--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.0"
+    "react-hook-form": "^7.52.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
