--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "swr": "^2.2.5"
   },
   "devDependencies": {
